# cdrs-benchmark

./: Cargo.toml  README.md
cdrs-async-bench/: Cargo.toml
cdrs-async-bench/src/: main.rs
cdrs-bench/: Cargo.toml  README.md
cdrs-bench/src/: main.rs
src/: main.rs
